crates/pato/tests/fixtures/valid/simple.gram
{ kind: "rule" }
(alice:Person {name: "Alice"})
(bob:Person {name: "Bob"})
(alice)-[:KNOWS]->(bob)
