crates/pato/tests/fixtures/invalid/P005.gram
(person:Person)
(team:Team)
(person)-[:MEMBER_OF]->(persn)
